name:                  czar
version:               0.1.0
synopsis:              Pending
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Monitoring
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Pending

library
    default-language:  Haskell2010
    hs-source-dirs:    czar

    exposed-modules:
        Control.Concurrent.Race
      , Control.Concurrent.Timer

      , Czar.Log
      , Czar.Socket

      , Czar.Internal.Protocol
      , Czar.Internal.Protocol.Attribute
      , Czar.Internal.Protocol.Event
      , Czar.Internal.Protocol.Metric
      , Czar.Internal.Protocol.Heartbeat
      , Czar.Internal.Protocol.Heartbeat.Mode
      , Czar.Internal.Protocol.Subscription
      , Czar.Internal.Protocol.Tag
      , Czar.Internal.Protocol.Threshold

      , Czar.Protocol

      , Data.MultiBiMap

    ghc-options:
        -Wall
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        async
      , base                      >= 4 && < 5
      , bytestring                >= 0.9
      , containers                >= 0.5
      , directory                 >= 1.2
      , errors                    >= 1.4
      , filepath                  >= 1.3
      , hashable
      , hslogger                  >= 1.2.1
      , MonadCatchIO-transformers >= 0.3
      , mtl
      , network
      , old-locale
      , parsec
      , protocol-buffers
      , protocol-buffers-descriptor
      , stm
      , text                      >= 0.11
      , time
      , transformers              >= 0.3
      , unix
      , unordered-containers

executable czar-server
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    czar-server

    ghc-options:
        -threaded
        -Wall
        -fwarn-tabs
        -funbox-strict-fields
        -with-rtsopts=-N

    build-depends:
        async
      , base                 >= 4 && < 5
      , bytestring           >= 0.9
      , containers           >= 0.5
      , czar
      , directory            >= 1.2
      , errors               >= 1.4
      , filepath             >= 1.3
      , hashable
      , MonadCatchIO-transformers
      , network
      , options              >= 0.1
      , stm
      , text                 >= 0.11
      , transformers         >= 0.3
      , unix
      , unordered-containers

-- executable czar-agent
--     default-language:  Haskell2010
--     main-is:           Main.hs
--     hs-source-dirs:    czar-agent

--     ghc-options:
--         -threaded
--         -Wall
--         -fwarn-tabs
--         -funbox-strict-fields

--     build-depends:
--         async
--       , base                 >= 4 && < 5
--       , bytestring           >= 0.9
--       , configurator
--       , containers
--       , czar
--       , directory            >= 1.2
--       , errors               >= 1.4
--       , filepath             >= 1.3
--       , MonadCatchIO-transformers
--       , network
--       , options              >= 0.1
--       , stm
--       , text                 >= 0.11
--       , time
--       , transformers         >= 0.3
--       , unordered-containers

executable czar-graphite
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    czar-graphite

    ghc-options:
        -threaded
        -Wall
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        async
      , base                 >= 4 && < 5
      , bytestring           >= 0.9
      , configurator
      , containers
      , czar
      , directory            >= 1.2
      , errors               >= 1.4
      , filepath             >= 1.3
      , network
      , options              >= 0.1
      , stm
      , text                 >= 0.11
      , time
      , transformers         >= 0.3
      , unordered-containers
