name:                  czar
version:               0.1.0
synopsis:              Pending
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Monitoring
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Pending

library
    default-language:  Haskell2010
    hs-source-dirs:    czar

    exposed-modules:
        Control.Concurrent.Race
      , Control.Concurrent.Timer
      , Czar.EKG
      , Czar.Internal.Protocol
      , Czar.Internal.Protocol.Attribute
      , Czar.Internal.Protocol.Event
      , Czar.Internal.Protocol.Metric
      , Czar.Internal.Protocol.Heartbeat
      , Czar.Internal.Protocol.Heartbeat.Mode
      , Czar.Internal.Protocol.Subscription
      , Czar.Internal.Protocol.Threshold
      , Czar.Log
      , Czar.Protocol
      , Czar.Socket
      , Data.MultiBiMap

    ghc-options:
        -Wall
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        async
      , base                      >= 4 && < 5
      , bytestring
      , containers
      , directory
      , ekg
      , errors
      , filepath
      , hashable
      , hslogger
      , MonadCatchIO-transformers
      , mtl
      , network
      , old-locale
      , parsec
      , protocol-buffers
      , protocol-buffers-descriptor
      , stm
      , text
      , time
      , transformers
      , unix
      , unordered-containers

executable czar-server
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    czar-server

    ghc-options:
        -threaded
        -Wall
        -fwarn-tabs
        -funbox-strict-fields
        -with-rtsopts=-N
        -with-rtsopts=-T

    build-depends:
        base                      >= 4 && < 5
      , bytestring
      , czar
      , errors
      , hashable
      , MonadCatchIO-transformers
      , network
      , options
      , stm
      , transformers
      , unordered-containers

executable czar-agent
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    czar-agent

    ghc-options:
        -threaded
        -Wall
        -fwarn-tabs
        -funbox-strict-fields
        -with-rtsopts=-T

    build-depends:
        async
      , base                      >= 4 && < 5
      , configurator
      , containers
      , czar
      , directory
      , errors
      , filepath
      , MonadCatchIO-transformers
      , network
      , options
      , stm
      , text
      , transformers
      , unordered-containers

executable czar-graphite
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    czar-graphite

    ghc-options:
        -threaded
        -Wall
        -fwarn-tabs
        -funbox-strict-fields
        -with-rtsopts=-T

    build-depends:
        base       >= 4 && < 5
      , containers
      , czar
      , errors
      , options
