name:                  czar-checks
version:               0.1.0
synopsis:              Pending
license:               OtherLicense
license-file:          ../LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Monitoring
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Pending

executable czar-health
    default-language:  Haskell2010
    main-is:           Health.hs
    hs-source-dirs:    src

    ghc-options:
        -threaded
        -Wall
        -fwarn-tabs
        -funbox-strict-fields
        -with-rtsopts=-T

    build-depends:
        base              >= 4 && < 5
      , base64-bytestring
      , bytestring
      , czar
      , errors
      , network
      , system-info
      , time
      , transformers
