name:                  czar
version:               0.1.0
synopsis:              Pending
license:               OtherLicense
license-file:          ../LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Monitoring
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Pending

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Control.Concurrent.Race
      , Control.Concurrent.Timeout
      , Czar.EKG
      , Czar.Internal.Protocol
      , Czar.Internal.Protocol.Attribute
      , Czar.Internal.Protocol.Event
      , Czar.Internal.Protocol.Metric
      , Czar.Internal.Protocol.Heartbeat
      , Czar.Internal.Protocol.Heartbeat.Mode
      , Czar.Internal.Protocol.Subscription
      , Czar.Internal.Protocol.Threshold
      , Czar.Log
      , Czar.Options
      , Czar.Options.Internal
      , Czar.Protocol
      , Czar.Socket
      , Czar.Types
      , Data.MultiBiMap
      , Paths_czar

    ghc-options:
        -Wall
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        async
      , base                      >= 4 && < 5
      , bytestring
      , configurator
      , containers
      , directory
      , ekg
      , errors
      , filepath
      , hashable
      , hslogger
      , MonadCatchIO-transformers
      , mtl
      , network
      , old-locale
      , options
      , parsec
      , protocol-buffers
      , protocol-buffers-descriptor
      , stm
      , template-haskell
      , text
      , time
      , transformers
      , unix
      , unordered-containers
