name:                  system-info
version:               0.1.0
synopsis:              Pending
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Monitoring
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md

description:
    Pending

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        System.Info.Disk
      , System.Info.Health

    other-modules:
        System.Info.Disk.OSX
      , System.Info.Health.OSX
      , System.Info.Types

    ghc-options:
        -Wall
        -fwarn-tabs
        -funbox-strict-fields

    build-depends:
        base          >= 4 && < 5
      , containers
      , errors
      , parsec
      , shqq
      , transformers
